--- a/messages.pot
+++ b/messages.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2018-09-17 13:20+0200\n"
+"POT-Creation-Date: 2018-09-26 23:08+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -31,7 +31,291 @@ msgid ""
 "language, which will be held in Bratislava on March, 2019."
 msgstr ""
 
-#: templates/index.html:8
+#: templates/body.html:48
+msgid "Venue"
+msgstr ""
+
+#: templates/body.html:51 templates/coc.html:7
+msgid "Code of Conduct"
+msgstr ""
+
+#: templates/body.html:54
+msgid "About Us"
+msgstr ""
+
+#: templates/body.html:87
+msgid "Go to top of page"
+msgstr ""
+
+#: templates/body.html:89
+#, python-format
+msgid ""
+"%(pycontm)s is a trademark for worldwide conference activities claimed by"
+" the %(psf)s."
+msgstr ""
+
+#: templates/body.html:91
+msgid "Python Software foundation"
+msgstr ""
+
+#: templates/body.html:93
+#, python-format
+msgid "PyCon SK is organized by volunteers from %(spy)s."
+msgstr ""
+
+#: templates/body.html:94
+msgid "SPy o.z."
+msgstr ""
+
+#: templates/body.html:96
+#, python-format
+msgid ""
+"Found a bug? Missing some information? This is community managed website,"
+" contribute at our %(github)s."
+msgstr ""
+
+#: templates/coc.html:11
+msgid ""
+"The Python community is made up of members from around the globe with a "
+"diverse set of skills, personalities, and experiences. It is through "
+"these differences that our community experiences great successes and "
+"continued growth. When you're working with members of the community, we "
+"encourage you to follow these guidelines which help steer our "
+"interactions and strive to keep Python a positive, successful, and "
+"growing community."
+msgstr ""
+
+#: templates/coc.html:13
+msgid "A member of the Python community is:"
+msgstr ""
+
+#: templates/coc.html:19
+msgid "Open"
+msgstr ""
+
+#: templates/coc.html:21
+msgid ""
+"Members of the community are open to collaboration, whether it's on PEPs,"
+" patches, problems, or otherwise. We're receptive to constructive "
+"comments and criticism, as the experiences and skill sets of other "
+"members contribute to the whole of our efforts. We're accepting of all "
+"who wish to take part in our activities, fostering an environment where "
+"anyone can participate and everyone can make a difference."
+msgstr ""
+
+#: templates/coc.html:24
+msgid "Considerate"
+msgstr ""
+
+#: templates/coc.html:26
+msgid ""
+"Members of the community are considerate of their peers -- other Python "
+"users. We're thoughtful when addressing the efforts of others, keeping in"
+" mind that often times the labor was completed simply for the good of the"
+" community. We're attentive in our communications, whether in person or "
+"online, and we're tactful when approaching differing views."
+msgstr ""
+
+#: templates/coc.html:29
+msgid "Respectful"
+msgstr ""
+
+#: templates/coc.html:31
+msgid ""
+"Members of the community are respectful. We're respectful of others, "
+"their positions, their skills, their commitments, and their efforts. "
+"We're respectful of the volunteer efforts that permeate the Python "
+"community. We're respectful of the processes set forth in the community, "
+"and we work within them. When we disagree, we are courteous in raising "
+"our issues."
+msgstr ""
+
+#: templates/coc.html:34
+msgid ""
+"Overall, we're good to each other. We contribute to this community not "
+"because we have to, but because we want to. If we remember that, these "
+"guidelines will come naturally."
+msgstr ""
+
+#: templates/coc.html:37
+msgid "Slovak Python Community"
+msgstr ""
+
+#: templates/coc.html:39
+msgid ""
+"PyCon SK and Python Meetup fully identify with the Code of Conduct of the"
+" Python community. We create an environment, which is open to everyone, "
+"independently of sex, sexual orientation, race, education or religion. "
+"All communication should be respectful and on professional level. We will"
+" be tolerant to each other."
+msgstr ""
+
+#: templates/coc.html:42
+msgid ""
+"We do not offend, vilify other members. We behave professionally. "
+"Harassment, sexist, racist or otherwise demeaning jokes are improper at "
+"our meetings. We will not tolerate any harassment of participants of "
+"meetups in any form."
+msgstr ""
+
+#: templates/index.html:13 templates/venue.html:9
+msgid ""
+"<strong>Fourth year</strong> will happen <strong>22-24th March, 2019 in "
+"Bratislava</strong>."
+msgstr ""
+
+#: templates/index.html:14
 msgid "More info will be announced soon..."
+msgstr ""
+
+#: templates/venue.html:8
+msgid "How do you get to Slovak PyCon?"
+msgstr ""
+
+#: templates/venue.html:11
+msgid "Venue Address"
+msgstr ""
+
+#: templates/venue.html:13
+msgid "Slovak University of Technology in Bratislava"
+msgstr ""
+
+#: templates/venue.html:14
+msgid "Faculty of Informatics and Information Technologies"
+msgstr ""
+
+#: templates/venue.html:19
+msgid "Travelling to Bratislava"
+msgstr ""
+
+#: templates/venue.html:21
+msgid ""
+"Bratislava is one of the youngest major cities in Europe. Nevertheless, "
+"it has a rich history of a free royal coronation town. At that time, it "
+"was still called the Pressburg (Prešpork). Today, Bratislava is a major "
+"transport hub in Central Europe, and there are plenty of possibilities of"
+" getting here."
+msgstr ""
+
+#: templates/venue.html:27
+msgid "By air"
+msgstr ""
+
+#: templates/venue.html:29
+msgid ""
+"If you are travelling to Bratislava, you can fly to the Bratislava "
+"airport (airport code: BTS) or the Vienna airport (airport code: VIE). "
+"The selection of flights to Vienna is better than to Bratislava."
+msgstr ""
+
+#: templates/venue.html:32
+msgid ""
+"There are shuttle buses running between Bratislava and Vienna airport "
+"every hour and they are relatively cheap (the bus ride costs about EUR 8 "
+"one way, if you book in advance it can got much cheaper). There are three"
+" bus companies operating airport shuttles between Vienna airport and "
+"Bratislava: SlovakLines (red buses), Blaguss (silver buses) and RegioJet "
+"(Yellow busses)."
+msgstr ""
+
+#: templates/venue.html:36
+msgid "By car"
+msgstr ""
+
+#: templates/venue.html:39
+msgid ""
+"From Vienna, take highway A4, heading to Schwechat airport, when possible"
+" take the exit that leads to highway A6, which heads towards Bratislava."
+msgstr ""
+
+#: templates/venue.html:40
+msgid ""
+"From Budapest, take highway M1 heading to Gyor, follow this route until "
+"you see signs for highway M15 headed to Slovakia and Bratislava."
+msgstr ""
+
+#: templates/venue.html:41
+msgid ""
+"From Prague, take highway D1 to Brno, once in Brno take highway D2 "
+"heading to Slovakia and Bratislava."
+msgstr ""
+
+#: templates/venue.html:42
+msgid ""
+"From Warsaw, take highway A1 heading to Katowice. From there follow the "
+"road for Čadca, Slovakia. Take this road all the way to Žilina, then "
+"switch to highway D1 to Bratislava."
+msgstr ""
+
+#: templates/venue.html:47
+msgid "By bus"
+msgstr ""
+
+#: templates/venue.html:49
+msgid ""
+"All neighbouring capital cities Vienna, Prague, Budapest, Warsaw and Kiev"
+" have direct bus connections."
+msgstr ""
+
+#: templates/venue.html:52
+msgid ""
+"Once you arrive at the Bratislava bus station (Mlynské Nivy), you'll need"
+" to walk through the terminal towards its main entrance. Take a left and "
+"walk about 70 meters towards a busy street. Do not cross the street. "
+"There will be public transportation bus stops immediately on your right "
+"hand side."
+msgstr ""
+
+#: templates/venue.html:56
+msgid "By train"
+msgstr ""
+
+#: templates/venue.html:58
+msgid ""
+"All neighboring capital cities Vienna, Prague, Budapest, Warsaw and Kiev "
+"have direct train connections."
+msgstr ""
+
+#: templates/venue.html:61
+msgid ""
+"Once you arrive at the Bratislava train station (Bratislava hlavná "
+"stanica), you'll need to walk through the terminal towards its main "
+"entrance. Directly in front of the main entrance you'll find all your "
+"public transportation options on your right hand side."
+msgstr ""
+
+#: templates/venue.html:67
+msgid "Accommodation"
+msgstr ""
+
+#: templates/venue.html:69
+msgid ""
+"There are plenty of opportunities for accommodation in Bratislava. From "
+"coach surfing, Airbnb to hostels and five star hotels. Even though it is "
+"not the main tourist season, we advise you to book your accommodations in"
+" advance."
+msgstr ""
+
+#: templates/venue.html:72
+msgid "Guide"
+msgstr ""
+
+#: templates/venue.html:74
+msgid ""
+"Bratislava offers much more than just PyCon. If you decide to stay in "
+"Bratislava a few days longer, have a look at <a "
+"href=\"http://mpba.sk/en\" title=\"M_P_ BA: alternative Bratislava map\" "
+"target=\"_blank\" class=\"external\">M_P_ BA</a> (alternative map of "
+"Bratislava) which lists popular attractions as well as unusual "
+"destinations within the city. Check out peoples' comments to find out "
+"about each location or event."
+msgstr ""
+
+#: templates/venue.html:77
+msgid ""
+"Or you can review the <a href=\"http://www.visitbratislava.com/\" "
+"title=\"city pages for visitors\" target=\"_blank\" "
+"class=\"external\">official city guide for visitors</a>, where you can "
+"also find other events that are happening in Bratislava."
 msgstr ""
 
