--- a/translations/sk/LC_MESSAGES/messages.po
+++ b/translations/sk/LC_MESSAGES/messages.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2018-09-17 13:20+0200\n"
-"PO-Revision-Date: 2018-09-17 13:16+0200\n"
+"POT-Creation-Date: 2018-09-26 23:08+0200\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: sk\n"
 "Language-Team: sk <LL@li.org>\n"
@@ -20,19 +20,395 @@ msgstr ""
 
 #: templates/body.html:7
 msgid "Official PyCon SK 2019 website"
-msgstr ""
+msgstr "Oficiálna stránka PyCon SK 2019"
 
 #: templates/body.html:13 templates/body.html:18
 msgid "PyCon SK 2019, Bratislava"
-msgstr ""
+msgstr "PyCon SK 2019, Bratislava"
 
 #: templates/body.html:15 templates/body.html:19
 msgid ""
 "PyCon SK is a community-organized conference for the Python programming "
 "language, which will be held in Bratislava on March, 2019."
 msgstr ""
+"PyCon SK je komunitou organizovaná konferencia pre programovací jazyk "
+"Python, ktorá sa bude konať v Bratislave v marci 2019."
 
-#: templates/index.html:8
-msgid "More info will be announced soon..."
+#: templates/body.html:48
+msgid "Venue"
+msgstr "Miesto konania"
+
+#: templates/body.html:51 templates/coc.html:7
+msgid "Code of Conduct"
+msgstr "Kódex správania"
+
+#: templates/body.html:54
+msgid "About Us"
+msgstr "O nás"
+
+#: templates/body.html:87
+msgid "Go to top of page"
+msgstr "Návrat na vrchol stránky"
+
+#: templates/body.html:89
+#, python-format
+msgid ""
+"%(pycontm)s is a trademark for worldwide conference activities claimed by"
+" the %(psf)s."
 msgstr ""
+"%(pycontm)s je ochranná známka %(psf)s pre celosvetové konferenčné "
+"aktivity."
+
+#: templates/body.html:91
+msgid "Python Software foundation"
+msgstr "Python Software foundation"
+
+#: templates/body.html:93
+#, python-format
+msgid "PyCon SK is organized by volunteers from %(spy)s."
+msgstr "PyCon SK je organizovaný dobrovoľníkmi z %(spy)s."
+
+#: templates/body.html:94
+msgid "SPy o.z."
+msgstr "SPy o.z."
+
+#: templates/body.html:96
+#, python-format
+msgid ""
+"Found a bug? Missing some information? This is community managed website,"
+" contribute at our %(github)s."
+msgstr ""
+"Našli ste chybu? Chýba Vám nejaká informácia? Toto je komunitou "
+"manažovaná webstránka, prispejte na našom %(github)se."
+
+#: templates/coc.html:11
+msgid ""
+"The Python community is made up of members from around the globe with a "
+"diverse set of skills, personalities, and experiences. It is through "
+"these differences that our community experiences great successes and "
+"continued growth. When you're working with members of the community, we "
+"encourage you to follow these guidelines which help steer our "
+"interactions and strive to keep Python a positive, successful, and "
+"growing community."
+msgstr ""
+"Python komunitu tvoria ľudia z celého sveta s rôznorodým súborom "
+"zručností, osobností a skúseností. Tieto rozdiely prispievajú k tomu, že "
+"naša komunita prežíva veľké úspechy a pokračuje v raste. Keď pracujete s "
+"členmi komunity, odporúčame vám dodržiavať tieto pokyny, ktoré pomáhajú "
+"riadiť váš styk s ostatnými a snažiť sa udržať Python komunitu pozitívnu,"
+" úspešnú a rastúcu."
+
+#: templates/coc.html:13
+msgid "A member of the Python community is:"
+msgstr "Člen Python komunity je:"
+
+#: templates/coc.html:19
+msgid "Open"
+msgstr "Otvorený"
+
+#: templates/coc.html:21
+msgid ""
+"Members of the community are open to collaboration, whether it's on PEPs,"
+" patches, problems, or otherwise. We're receptive to constructive "
+"comments and criticism, as the experiences and skill sets of other "
+"members contribute to the whole of our efforts. We're accepting of all "
+"who wish to take part in our activities, fostering an environment where "
+"anyone can participate and everyone can make a difference."
+msgstr ""
+"Členovia komunity sú otvorení k spolupráci, či už ide priamo o vývoj "
+"samotného Pythonu, štandardnej knižnice, dokumentácie, PEPov, vývoj iných"
+" Python projektov, iných open source projektov, riešenie spoločensko "
+"prospešných problémov, alebo o prácu na iných spriatelených projektoch. "
+"Sme vnímaví ku komentárom a konštruktívnej kritike, pretože skúsenosti a "
+"zručnosti ostatných členov prispievajú k celému nášmu úsiliu. Prijímame "
+"všetkých, ktorí sa chcú zúčastniť našich aktivít, podporujeme prostredie,"
+" kde sa môže ktokoľvek podieľať a každý ho môže zlepšiť."
+
+#: templates/coc.html:24
+msgid "Considerate"
+msgstr "Ohľaduplný"
+
+#: templates/coc.html:26
+msgid ""
+"Members of the community are considerate of their peers -- other Python "
+"users. We're thoughtful when addressing the efforts of others, keeping in"
+" mind that often times the labor was completed simply for the good of the"
+" community. We're attentive in our communications, whether in person or "
+"online, and we're tactful when approaching differing views."
+msgstr ""
+"Členovia komunity sú ohľaduplní voči ostatným používateľom Pythonu. "
+"Rešpektujeme úsilie druhých, pričom máme na pamäti, že častokrát ich "
+"práca bola venovaná len pre dobro komunity. Sme všímaví v našich "
+"vyjadreniach, či už osobne alebo on-line a sme taktní, keď príde na "
+"rozdielne názory."
+
+#: templates/coc.html:29
+msgid "Respectful"
+msgstr "Úctivý"
+
+#: templates/coc.html:31
+msgid ""
+"Members of the community are respectful. We're respectful of others, "
+"their positions, their skills, their commitments, and their efforts. "
+"We're respectful of the volunteer efforts that permeate the Python "
+"community. We're respectful of the processes set forth in the community, "
+"and we work within them. When we disagree, we are courteous in raising "
+"our issues."
+msgstr ""
+"Členovia komunity sú úctiví. Rešpektujeme ostatných, ich pozíciu, ich "
+"zručnosti, ich záväzky a ich úsilie. Rešpektujeme dobrovoľné úsilie, "
+"ktoré venujú Python komunite. Rešpektujeme postupy stanovené v komunite a"
+" využívame ich pri práci. Keď nesúhlasíme, sme zdvorilí pri adresovaní "
+"našich problémov."
+
+#: templates/coc.html:34
+msgid ""
+"Overall, we're good to each other. We contribute to this community not "
+"because we have to, but because we want to. If we remember that, these "
+"guidelines will come naturally."
+msgstr ""
+"Celkovo sme dobrí k sebe navzájom. Prispievame k tejto komunite nie "
+"preto, že musíme, ale preto, že chceme. Ak si to uvedomíme, tak nám tieto"
+" pokyny prídu prirodzené."
+
+#: templates/coc.html:37
+msgid "Slovak Python Community"
+msgstr "Slovenská Python komunita"
+
+#: templates/coc.html:39
+msgid ""
+"PyCon SK and Python Meetup fully identify with the Code of Conduct of the"
+" Python community. We create an environment, which is open to everyone, "
+"independently of sex, sexual orientation, race, education or religion. "
+"All communication should be respectful and on professional level. We will"
+" be tolerant to each other."
+msgstr ""
+"PyCon SK aj Python stretnutia sa plne stotožňujú s kódexom správania "
+"členov Python komunity. Prinášame prostredie, ktoré je otvorené pre "
+"všetkých, nezávisle na pohlaví, sexuálnej orientácii, postihnutí, "
+"fyzickom vzhľade, veľkosti, rase, vzdelaní či vierovyznaní. Každá "
+"komunikácia by mala byť úctivá a na profesionálnej úrovni. Buďme k sebe "
+"navzájom tolerantní."
+
+#: templates/coc.html:42
+msgid ""
+"We do not offend, vilify other members. We behave professionally. "
+"Harassment, sexist, racist or otherwise demeaning jokes are improper at "
+"our meetings. We will not tolerate any harassment of participants of "
+"meetups in any form."
+msgstr ""
+"Neurážame, ani nezhadzujeme iných účastníkov. Správame sa profesionálne. "
+"Obťažovanie, sexistické, rasistické, alebo inak vyraďujúce vtipy sú "
+"nevhodné na našom stretnutí. Nebudeme tolerovať obťažovanie účastníkov "
+"stretnutia v akejkoľvek forme."
+
+#: templates/index.html:13 templates/venue.html:9
+msgid ""
+"<strong>Fourth year</strong> will happen <strong>22-24th March, 2019 in "
+"Bratislava</strong>."
+msgstr ""
+"Hostiteľom <strong>štvrtého ročníka</strong> bude opäť "
+"<strong>Bratislava, 22.-24. Marec 2019</strong>."
+
+#: templates/index.html:14
+msgid "More info will be announced soon..."
+msgstr "Viac informácií oznámime čoskoro..."
+
+#: templates/venue.html:8
+msgid "How do you get to Slovak PyCon?"
+msgstr "Ako sa dostanete na slovenský PyCon?"
+
+#: templates/venue.html:11
+msgid "Venue Address"
+msgstr "Adresa konferencie"
+
+#: templates/venue.html:13
+msgid "Slovak University of Technology in Bratislava"
+msgstr "Slovenská technická univerzita v Bratislave"
+
+#: templates/venue.html:14
+msgid "Faculty of Informatics and Information Technologies"
+msgstr "Fakulta informatiky a informačných technológií"
+
+#: templates/venue.html:19
+msgid "Travelling to Bratislava"
+msgstr "Cestovanie do Bratislavy"
+
+#: templates/venue.html:21
+msgid ""
+"Bratislava is one of the youngest major cities in Europe. Nevertheless, "
+"it has a rich history of a free royal coronation town. At that time, it "
+"was still called the Pressburg (Prešpork). Today, Bratislava is a major "
+"transport hub in Central Europe, and there are plenty of possibilities of"
+" getting here."
+msgstr ""
+"Bratislava patrí medzi najmladšie hlavné mestá Európy. Napriek tomu má "
+"bohatú históriu slobodného kráľovského korunovačného mesta. Vtedy bola "
+"ešte nazývaná Prešporkom. Dnes je Bratislava významný dopravný uzol v "
+"strednej Európe a možností, ako sa sem dostať, je neúrekom."
+
+#: templates/venue.html:27
+msgid "By air"
+msgstr "Letecky"
+
+#: templates/venue.html:29
+msgid ""
+"If you are travelling to Bratislava, you can fly to the Bratislava "
+"airport (airport code: BTS) or the Vienna airport (airport code: VIE). "
+"The selection of flights to Vienna is better than to Bratislava."
+msgstr ""
+"Ak cestujete do Bratislavy, môžete letieť na bratislavské letisko (kód "
+"letiska: BTS) alebo na letisko Viedeň (kód letiska: VIE). Viedenské "
+"letisko má v porovnaní s bratislavským podstatne väčší výber letov."
+
+#: templates/venue.html:32
+msgid ""
+"There are shuttle buses running between Bratislava and Vienna airport "
+"every hour and they are relatively cheap (the bus ride costs about EUR 8 "
+"one way, if you book in advance it can got much cheaper). There are three"
+" bus companies operating airport shuttles between Vienna airport and "
+"Bratislava: SlovakLines (red buses), Blaguss (silver buses) and RegioJet "
+"(Yellow busses)."
+msgstr ""
+"Medzi viedenským letiskom a Bratislavou premáva priame a cenovo dostupné "
+"autobusové spojenie každú hodinu - jednosmerná jazda stojí okolo 8 EUR, "
+"ak si zakúpite lístok v predstihu môže byť výrazne lacnejší. Autobusovú "
+"prepravu prevádzkujú tri spoločnosti: SlovakLines (červené autobusy), "
+"Blaguss (strieborné autobusy), RegioJet (žlté autobusy)."
+
+#: templates/venue.html:36
+msgid "By car"
+msgstr "Autom"
+
+#: templates/venue.html:39
+msgid ""
+"From Vienna, take highway A4, heading to Schwechat airport, when possible"
+" take the exit that leads to highway A6, which heads towards Bratislava."
+msgstr ""
+"Z Viedne smerom na letisko Schwechat po diaľnici A4, odbočte na diaľnicu "
+"A6, ktorá vedie priamo do Bratislavy."
+
+#: templates/venue.html:40
+msgid ""
+"From Budapest, take highway M1 heading to Gyor, follow this route until "
+"you see signs for highway M15 headed to Slovakia and Bratislava."
+msgstr ""
+"Z Budapešti po diaľnici M1 smerom na Gyor, neskôr odbočte na cestu M15 "
+"smerom na Slovensko, do Bratislavy."
+
+#: templates/venue.html:41
+msgid ""
+"From Prague, take highway D1 to Brno, once in Brno take highway D2 "
+"heading to Slovakia and Bratislava."
+msgstr ""
+"Z Prahy po diaľnici D1 do Brna, tam odbočte na D2, ktorá vedie až na "
+"Slovensko a pokračujte smerom do Bratislavy."
+
+#: templates/venue.html:42
+msgid ""
+"From Warsaw, take highway A1 heading to Katowice. From there follow the "
+"road for Čadca, Slovakia. Take this road all the way to Žilina, then "
+"switch to highway D1 to Bratislava."
+msgstr ""
+"Z Varšavy po diaľnici A1 smerom na Katowice, odtiaľ na Slovensko do Čadce"
+" po ceste prvej triedy až do Žiliny. Potom po diaľnici D1 až do "
+"Bratislavy."
+
+#: templates/venue.html:47
+msgid "By bus"
+msgstr "Autobusom"
+
+#: templates/venue.html:49
+msgid ""
+"All neighbouring capital cities Vienna, Prague, Budapest, Warsaw and Kiev"
+" have direct bus connections."
+msgstr ""
+"Všetky okolité hlavné mestá - Viedeň, Praha, Budapešť, Varšava aj Kyjev -"
+" majú priame autobusové spojenie do Bratislavy."
+
+#: templates/venue.html:52
+msgid ""
+"Once you arrive at the Bratislava bus station (Mlynské Nivy), you'll need"
+" to walk through the terminal towards its main entrance. Take a left and "
+"walk about 70 meters towards a busy street. Do not cross the street. "
+"There will be public transportation bus stops immediately on your right "
+"hand side."
+msgstr ""
+"Keď vystúpite na autobusovej stanici v Bratislave (Mlynské Nivy), musíte "
+"prejsť cez staničnú halu k hlavnému vchodu. Zamierte doľava a po "
+"približne 70 metroch sa dostanete k zastávkam mestskej hromadnej dopravy."
+
+#: templates/venue.html:56
+msgid "By train"
+msgstr "Vlakom"
+
+#: templates/venue.html:58
+msgid ""
+"All neighboring capital cities Vienna, Prague, Budapest, Warsaw and Kiev "
+"have direct train connections."
+msgstr ""
+"Z hlavných miest všetkých susedných krajín, teda z Viedne, Prahy, "
+"Budapešti, Varšavy aj Kyjeva, sa priamo do Bratislavy možno dostať aj "
+"vlakom."
+
+#: templates/venue.html:61
+msgid ""
+"Once you arrive at the Bratislava train station (Bratislava hlavná "
+"stanica), you'll need to walk through the terminal towards its main "
+"entrance. Directly in front of the main entrance you'll find all your "
+"public transportation options on your right hand side."
+msgstr ""
+"Po príchode na hlavnú železničnú stanicu v Bratislave prejdite cez "
+"staničnú budovu k hlavnému vchodu. Po pravej ruke, približne o 100 metrov"
+" nižšie, sa nachádzajú zastávky mestskej hromadnej dopravy."
+
+#: templates/venue.html:67
+msgid "Accommodation"
+msgstr "Ubytovanie"
+
+#: templates/venue.html:69
+msgid ""
+"There are plenty of opportunities for accommodation in Bratislava. From "
+"coach surfing, Airbnb to hostels and five star hotels. Even though it is "
+"not the main tourist season, we advise you to book your accommodations in"
+" advance."
+msgstr ""
+"V Bratislave máte široké možnosti ubytovania: od coach surfingu cez "
+"Airbnb, hostely až po päťhviezdičkové hotely. Hoci sa konferencia koná "
+"mimo hlavnej turistickej sezóny, určite odporúčame zabezpečiť si "
+"ubytovanie v predstihu."
+
+#: templates/venue.html:72
+msgid "Guide"
+msgstr "Sprievodca"
+
+#: templates/venue.html:74
+msgid ""
+"Bratislava offers much more than just PyCon. If you decide to stay in "
+"Bratislava a few days longer, have a look at <a "
+"href=\"http://mpba.sk/en\" title=\"M_P_ BA: alternative Bratislava map\" "
+"target=\"_blank\" class=\"external\">M_P_ BA</a> (alternative map of "
+"Bratislava) which lists popular attractions as well as unusual "
+"destinations within the city. Check out peoples' comments to find out "
+"about each location or event."
+msgstr ""
+"V Bratislave sa popri konferencii môžete aj zabaviť a získať jedinečné "
+"zážitky. Ak sa rozhodnete ostať v Bratislave o niekoľko dní dlhšie, "
+"určite si pozrite <a href=\"http://mpba.sk/sk\" title=\"M_P_ BA: "
+"alternatívna mapa Bratislavy\" target=\"_blank\" class=\"external\">M_P_ "
+"BA</a> (alternatívnu mapu Bratislavy), kde nájdete prehľad obľúbených "
+"miest obyvateľov Bratislavy s ich autentickými odporúčaniami a "
+"subjektívnymi názormi."
+
+#: templates/venue.html:77
+msgid ""
+"Or you can review the <a href=\"http://www.visitbratislava.com/\" "
+"title=\"city pages for visitors\" target=\"_blank\" "
+"class=\"external\">official city guide for visitors</a>, where you can "
+"also find other events that are happening in Bratislava."
+msgstr ""
+"Prípadne si môžete pozrieť <a href=\"http://www.visitbratislava.com/sk\" "
+"title=\"stránky mesta pre návštevníkov\" target=\"_blank\" "
+"class=\"external\">oficiálne stránky mesta, určené pre návštevníkov</a>, "
+"kde nájdete aj iné udalosti, ktoré sa práve odohrávajú v Bratislave."
 
