--- a/messages.pot
+++ b/messages.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2018-10-01 00:59+0200\n"
+"POT-Creation-Date: 2018-10-01 23:40+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -244,7 +244,8 @@ msgstr ""
 msgid ""
 "Learn more\n"
 "            about Mailchimp's privacy practices <a "
-"href=\"https://mailchimp.com/legal/\" target=\"_blank\">here</a>."
+"href=\"https://mailchimp.com/legal/\" target=\"_blank\" "
+"class=\"external\">here</a>."
 msgstr ""
 
 #: templates/mailchimp.html:47
