--- a/translations/sk/LC_MESSAGES/messages.po
+++ b/translations/sk/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2018-10-01 23:40+0200\n"
+"POT-Creation-Date: 2018-10-12 10:17+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: sk\n"
@@ -85,6 +85,113 @@ msgid ""
 msgstr ""
 "Našli ste chybu? Chýba Vám nejaká informácia? Toto je komunitou "
 "manažovaná webstránka, prispejte na našom %(github)se."
+
+#: templates/cfp.html:8
+msgid "Call for proposals"
+msgstr "Výzva na predloženie návrhov na prednášky"
+
+#: templates/cfp.html:9
+msgid "The Call For Proposals is open!"
+msgstr "Podávanie návrhov na prednášky je otvorené!"
+
+#: templates/cfp.html:12
+msgid ""
+"PyCon is organized by the Python community and for the Python community. "
+"You're coming to the event, and that makes you part of the community. If "
+"you've done something that you think other people might be interested in,"
+" or that you think they should know about, please do consider telling us "
+"about it. We don't just want to hear from the experts or famous names - "
+"other perspectives are just as valuable, so don't let the idea that "
+"you're not expert or famous enough stop you. This is your invitation to "
+"submit a talk proposal if you haven't spoken at the conference before. "
+"First-time speakers talk proposals are preferred."
+msgstr ""
+"PyCon organizuje Python komunita pre komunitu. Ak idete na túto "
+"konferenciu, stávate sa súčasťou tejto komunity. Pokiaľ ste spravili "
+"niečo, čo by mohlo zaujímať aj iných, alebo si myslíte, že ostatní by o "
+"tom mali vedieť, príďte nám o tom spraviť prednášku. Nechceme počúvať iba"
+" expertov a známe osobnosti - aj noví perspektívni rečníci sú tiež "
+"zaujímaví, preto sa, prosím, nenechajte odradiť pocitom, že nie ste "
+"expert alebo známa osobnosť. Toto je naša pozvánka, aby ste poslali návrh"
+" na prednášku, aj ak ste ešte nikdy na konferencií neprednášali. Rečníci "
+"vystupujúci prvýkrát budú uprednostňovaní."
+
+#: templates/cfp.html:15
+msgid "Where to submit your proposal"
+msgstr "Kam poslať Váš návrh na prednášku"
+
+#: templates/cfp.html:17
+msgid ""
+"We are glad you are interested in giving a talk at PyCon SK 2019! Submit "
+"your talk proposal with short abstract and your bio. All selected "
+"speakers get a complimentary ticket to the conference."
+msgstr ""
+"Sme radi, že máte záujem prednášať na PyCon SK 2019! Pošlite nám Váš "
+"návrh aj so stručným obsahom a životopisom. Všetci rečníci majú vstup na "
+"konferenciu zadarmo."
+
+#: templates/cfp.html:20
+msgid ""
+"The deadline for submissions is the end of 14th February 2019. If you "
+"have any questions, please contact us via email: info@pycon.sk or join "
+"our Slack channel"
+msgstr ""
+"14. februara 2019 ukončíme možnosť prihlásiť si prednášku. Ak máte "
+"otázky, kontaktujte nás emailom: info@pycon.sk alebo sa pridajte na náš "
+"Slack kanál."
+
+#: templates/cfp.html:23
+msgid "Guidelines for Proposal Submission"
+msgstr "Pokyny pre podávanie návrhov"
+
+#: templates/cfp.html:25
+msgid ""
+"There is no official restriction on the topic that you propose a talk "
+"session. Talks about Python or the Python community are most likely to "
+"line up with the interests of PyCon's audience, and a key consideration "
+"that the talk selection committee will be thinking about is your talk's "
+"ability to draw an audience. You may propose more than one, but the "
+"committee will ask you to choose only one talk if more than one of your "
+"proposals is accepted."
+msgstr ""
+"Nie je žiadne oficiálne obmedzenie tém, ktoré môžete navrhnúť ako svoju "
+"prednášku. Prednášky o Pythone alebo komunite budú s vysokou "
+"pravdepodobnosťou zaujímavé pre publikum. Hlavným kritériom, ktoré bude "
+"komisia pri výbere prednášok zvažovať, je to, ako Vaša prednáška zaujme "
+"publikum. Je stanovený limit na jednu prednášku pre rečníka. Navrhnúť "
+"môžete viac ako jednu, komisia Vás však vyzve, aby ste vybrali iba jednu "
+"prednášku (v prípade, že bude akceptovaných viac návrhov)."
+
+#: templates/cfp.html:31
+msgid "Talks"
+msgstr "Prednášky"
+
+#: templates/cfp.html:33
+msgid ""
+"Most talks are 30 minutes long, but we do offer a limited number of "
+"45-minute slots for important topics that promise to benefit from a more "
+"extensive treatment."
+msgstr ""
+"Väčšina prednášok má dĺžku 30 minút, ale ponúkame aj 45 minútový vstup "
+"pre zaujímavé témy, ktoré budú vyžadovať dlhší vstup."
+
+#: templates/cfp.html:37
+msgid "Workshops"
+msgstr "Workshopy"
+
+#: templates/cfp.html:39
+msgid ""
+"As with the talks, we are looking for tutorials that can grow this "
+"community at any level! We aim for tutorials that will advance Python, "
+"advance this community, and shape the future. As tutorials are longer "
+"than talks and are in an interactive classroom-like setting, they require"
+" much more preparation."
+msgstr ""
+"Tak ako na prednášky, tešíme sa aj na tutoriály, ktoré budú vhodné pre "
+"komunitu na akejkoľvek úrovni! Prostredníctvom takýchto výukových "
+"programov sa snažíme zveľaďovať Python komunitu a formovať budúcnosť. "
+"Vzhľadom na to, že návody trvajú dlhšie a budú v menších miestnostiach, "
+"vyžadujú oveľa viac prípravy."
 
 #: templates/coc.html:11
 msgid ""
