--- a/translations/sk/LC_MESSAGES/messages.po
+++ b/translations/sk/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2018-10-12 10:56+0200\n"
+"POT-Creation-Date: 2018-10-12 13:31+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: sk\n"
@@ -38,23 +38,27 @@ msgstr ""
 msgid "Venue"
 msgstr "Miesto konania"
 
-#: templates/body.html:51 templates/coc.html:7
+#: templates/body.html:51 templates/cfp.html:8
+msgid "Call for proposals"
+msgstr "Výzva na predloženie návrhov na prednášky"
+
+#: templates/body.html:54 templates/coc.html:7
 msgid "Code of Conduct"
 msgstr "Kódex správania"
 
-#: templates/body.html:54
+#: templates/body.html:57
 msgid "Sponsoring"
 msgstr "Sponzoruj"
 
-#: templates/body.html:57
+#: templates/body.html:60
 msgid "About Us"
 msgstr "O nás"
 
-#: templates/body.html:90
+#: templates/body.html:93
 msgid "Go to top of page"
 msgstr "Návrat na vrchol stránky"
 
-#: templates/body.html:92
+#: templates/body.html:95
 #, python-format
 msgid ""
 "%(pycontm)s is a trademark for worldwide conference activities claimed by"
@@ -63,25 +67,25 @@ msgstr ""
 "%(pycontm)s je ochranná známka %(psf)s pre celosvetové konferenčné "
 "aktivity."
 
-#: templates/body.html:94
+#: templates/body.html:97
 msgid "Python Software foundation"
 msgstr "Python Software foundation"
 
-#: templates/body.html:96
+#: templates/body.html:99
 #, python-format
 msgid "PyCon SK is organized by volunteers from %(spy)s."
 msgstr "PyCon SK je organizovaný dobrovoľníkmi z %(spy)s."
 
-#: templates/body.html:97
+#: templates/body.html:100
 msgid "SPy o.z."
 msgstr "SPy o.z."
 
-#: templates/body.html:97
+#: templates/body.html:100
 #, python-format
 msgid "Our <a href=\"%(url)s\">Privacy Policy</a>."
 msgstr ""
 
-#: templates/body.html:99
+#: templates/body.html:102
 #, python-format
 msgid ""
 "Found a bug? Missing some information? This is community managed website,"
@@ -89,6 +93,115 @@ msgid ""
 msgstr ""
 "Našli ste chybu? Chýba Vám nejaká informácia? Toto je komunitou "
 "manažovaná webstránka, prispejte na našom %(github)se."
+
+#: templates/cfp.html:9
+msgid "The Call For Proposals will open soon!"
+msgstr "Podávanie návrhov na prednášky bude čoskoro otvorené!\""
+
+#: templates/cfp.html:12
+msgid ""
+"PyCon is organized by the Python community and for the Python community. "
+"You're coming to the event, and that makes you part of the community. If "
+"you've done something that you think other people might be interested in,"
+" or that you think they should know about, please do consider telling us "
+"about it. We don't just want to hear from the experts or famous names - "
+"other perspectives are just as valuable, so don't let the idea that "
+"you're not expert or famous enough stop you. This is your invitation to "
+"submit a talk proposal if you haven't spoken at the conference before. "
+"First-time speakers talk proposals are preferred."
+msgstr ""
+"PyCon organizuje Python komunita pre komunitu. Ak idete na túto "
+"konferenciu, stávate sa súčasťou tejto komunity. Pokiaľ ste spravili "
+"niečo, čo by mohlo zaujímať aj iných, alebo si myslíte, že ostatní by o "
+"tom mali vedieť, príďte nám o tom spraviť prednášku. Nechceme počúvať iba"
+" expertov a známe osobnosti - aj noví perspektívni rečníci sú tiež "
+"zaujímaví, preto sa, prosím, nenechajte odradiť pocitom, že nie ste "
+"expert alebo známa osobnosť. Toto je naša pozvánka, aby ste poslali návrh"
+" na prednášku, aj ak ste ešte nikdy na konferencií neprednášali. Rečníci "
+"vystupujúci prvýkrát budú uprednostňovaní."
+
+#: templates/cfp.html:15
+msgid "Where to submit your proposal"
+msgstr "Kam poslať Váš návrh na prednášku"
+
+#: templates/cfp.html:17
+msgid ""
+"We are glad you are interested in giving a talk at PyCon SK 2019! Submit "
+"your talk proposal with short abstract and your bio. All selected "
+"speakers get a complimentary ticket to the conference."
+msgstr ""
+"Sme radi, že máte záujem prednášať na PyCon SK 2019! Pošlite nám Váš "
+"návrh aj so stručným obsahom a životopisom. Všetci rečníci majú vstup na "
+"konferenciu zadarmo."
+
+#: templates/cfp.html:20
+msgid "Call for proposals for PyCon SK 2019 will open 16th of October 2018."
+msgstr ""
+"Podávanie návrhov na prednášky pre PyCon SK bude otvorené 16. októbra "
+"2018."
+
+#: templates/cfp.html:21
+msgid ""
+"The deadline for submissions is the end of 14th February 2019. If you "
+"have any questions, please contact us via email: info@pycon.sk or join "
+"our Slack channel"
+msgstr ""
+"14. februara 2019 ukončíme možnosť prihlásiť si prednášku. Ak máte "
+"otázky, kontaktujte nás emailom: info@pycon.sk alebo sa pridajte na náš "
+"Slack kanál."
+
+#: templates/cfp.html:24
+msgid "Guidelines for Proposal Submission"
+msgstr "Pokyny pre podávanie návrhov"
+
+#: templates/cfp.html:26
+msgid ""
+"There is no official restriction on the topic that you propose a talk "
+"session. Talks about Python or the Python community are most likely to "
+"line up with the interests of PyCon's audience, and a key consideration "
+"that the talk selection committee will be thinking about is your talk's "
+"ability to draw an audience. You may propose more than one, but the "
+"committee will ask you to choose only one talk if more than one of your "
+"proposals is accepted."
+msgstr ""
+"Nie je žiadne oficiálne obmedzenie tém, ktoré môžete navrhnúť ako svoju "
+"prednášku. Prednášky o Pythone alebo komunite budú s vysokou "
+"pravdepodobnosťou zaujímavé pre publikum. Hlavným kritériom, ktoré bude "
+"komisia pri výbere prednášok zvažovať, je to, ako Vaša prednáška zaujme "
+"publikum. Je stanovený limit na jednu prednášku pre rečníka. Navrhnúť "
+"môžete viac ako jednu, komisia Vás však vyzve, aby ste vybrali iba jednu "
+"prednášku (v prípade, že bude akceptovaných viac návrhov)."
+
+#: templates/cfp.html:32
+msgid "Talks"
+msgstr "Prednášky"
+
+#: templates/cfp.html:34
+msgid ""
+"Most talks are 30 minutes long, but we do offer a limited number of "
+"45-minute slots for important topics that promise to benefit from a more "
+"extensive treatment."
+msgstr ""
+"Väčšina prednášok má dĺžku 30 minút, ale ponúkame aj 45 minútový vstup "
+"pre zaujímavé témy, ktoré budú vyžadovať dlhší vstup."
+
+#: templates/cfp.html:38
+msgid "Workshops"
+msgstr "Workshopy"
+
+#: templates/cfp.html:40
+msgid ""
+"As with the talks, we are looking for tutorials that can grow this "
+"community at any level! We aim for tutorials that will advance Python, "
+"advance this community, and shape the future. As tutorials are longer "
+"than talks and are in an interactive classroom-like setting, they require"
+" much more preparation."
+msgstr ""
+"Tak ako na prednášky, tešíme sa aj na tutoriály, ktoré budú vhodné pre "
+"komunitu na akejkoľvek úrovni! Prostredníctvom takýchto výukových "
+"programov sa snažíme zveľaďovať Python komunitu a formovať budúcnosť. "
+"Vzhľadom na to, že návody trvajú dlhšie a budú v menších miestnostiach, "
+"vyžadujú oveľa viac prípravy."
 
 #: templates/coc.html:11
 msgid ""
@@ -476,36 +589,47 @@ msgid "Why become a sponsor?"
 msgstr "Prečo sa stať sponzorom?"
 
 #: templates/sponsoring.html:9
-msgid "We need you — PyCon SK 2018 in Bratislava seeks for sponsors and partners!"
-msgstr "Potrebujeme vás — PyCon SK 2018 v Bratislave hľadá sponzorov a partnerov!"
+msgid "We need you — PyCon SK 2019 in Bratislava seeks for sponsors and partners!"
+msgstr "Potrebujeme vás — PyCon SK 2019 v Bratislave hľadá sponzorov a partnerov!"
 
 #: templates/sponsoring.html:12
 msgid ""
 "PyCon is an annual gathering for the community using and developing the "
 "open-source Python programming language. The conference is completely "
 "organized by volunteers."
-msgstr "PyCon je každoročné stretnutie komunity ľudí, ktorí používajú alebo vyvíjajú open source programovací jazyk Python. Konferencia je kompletne organizovaná dobrovoľníkmi."
+msgstr ""
+"PyCon je každoročné stretnutie komunity ľudí, ktorí používajú alebo "
+"vyvíjajú open source programovací jazyk Python. Konferencia je kompletne "
+"organizovaná dobrovoľníkmi."
 
 #: templates/sponsoring.html:16
 msgid ""
 "The members of the Python community organize a PyCon conference in their "
 "home countries regularly, PyCon will happen in Slovakia for the third "
 "time."
-msgstr "Členovia Python komunity organizujú PyCon konferencie vo svojich domovských krajinách pravidelne. PyCon bude na Slovensku už po tretí raz."
+msgstr ""
+"Členovia Python komunity organizujú PyCon konferencie vo svojich "
+"domovských krajinách pravidelne. PyCon bude na Slovensku už po tretí raz."
 
 #: templates/sponsoring.html:20
 msgid ""
 "To ensure high-quality speakers and keep the tickets price available for "
 "everyone we need you, the sponsors, who allow the conference to take "
 "place."
-msgstr "Aby sme mohli zabezpečiť kvalitných prednášajúcich a pritom udržať cenu vstupeniek dostupnú pre každého, potrebujeme vás, sponzorov, ktorí umožnia túto konferenciu uskutočniť."
+msgstr ""
+"Aby sme mohli zabezpečiť kvalitných prednášajúcich a pritom udržať cenu "
+"vstupeniek dostupnú pre každého, potrebujeme vás, sponzorov, ktorí "
+"umožnia túto konferenciu uskutočniť."
 
 #: templates/sponsoring.html:24
 msgid ""
 "Do not hesitate to contact us. We are flexible and willing to work with "
 "you to design a sponsorship package that is going to meet your business "
 "needs."
-msgstr "Neváhajte nás kedykoľvek kontaktovať. Sme flexibilní a ochotní spolupracovať a navrhnúť s vami balíček sponzorstva, ktorý splní vaše obchodné potreby."
+msgstr ""
+"Neváhajte nás kedykoľvek kontaktovať. Sme flexibilní a ochotní "
+"spolupracovať a navrhnúť s vami balíček sponzorstva, ktorý splní vaše "
+"obchodné potreby."
 
 #: templates/sponsoring.html:31
 msgid "Marketing"
@@ -515,7 +639,9 @@ msgstr "Marketing"
 msgid ""
 "Looking for new users for your product? Such people can be found at PyCon"
 " - they also will look for new products and ideas."
-msgstr "Hľadáte nových používateľov pre váš produkt? Takých ľudí nájdete na PyCone - aj oni budú hľadať nové produkty a nápady."
+msgstr ""
+"Hľadáte nových používateľov pre váš produkt? Takých ľudí nájdete na "
+"PyCone - aj oni budú hľadať nové produkty a nápady."
 
 #: templates/sponsoring.html:36
 msgid "Recruitment"
@@ -526,7 +652,10 @@ msgid ""
 "Are you looking for programmers? PyCon is the best place for meeting new "
 "talents. Many participants will be experienced developers looking for "
 "their next big career move."
-msgstr "Hľadáte programátorov? PyCon je to najlepšie miesto pre stretnutie nových talentov. Mnohí účastníci budú skúsení vývojári, ktorí hľadajú svoj ďalší veľký kariérny krok."
+msgstr ""
+"Hľadáte programátorov? PyCon je to najlepšie miesto pre stretnutie nových"
+" talentov. Mnohí účastníci budú skúsení vývojári, ktorí hľadajú svoj "
+"ďalší veľký kariérny krok."
 
 #: templates/sponsoring.html:41
 msgid "Audience"
@@ -537,7 +666,10 @@ msgid ""
 "Want to get your message across to the people, so they talk about you? "
 "PyCon is a great opportunity. People in the Python community like to "
 "discover and share new things."
-msgstr "Chcete dostať svoje posolstvo medzi ľudí, aby sa o vás hovorilo? PyCon je na to skvelá príležitosť. Ľudia v Python komunite radi objavujú a zdieľajú nové veci."
+msgstr ""
+"Chcete dostať svoje posolstvo medzi ľudí, aby sa o vás hovorilo? PyCon je"
+" na to skvelá príležitosť. Ľudia v Python komunite radi objavujú a "
+"zdieľajú nové veci."
 
 #: templates/sponsoring.html:46
 msgid "Community"
@@ -547,7 +679,9 @@ msgstr "Komunita"
 msgid ""
 "Looking for new contributors and partners for your open source project? "
 "PyCon is the place, where they also will look for you."
-msgstr "Hľadáte nových prispievateľov a partnerov pre váš open source projekt? PyCon je miesto, kde aj oni budú hľadať vás."
+msgstr ""
+"Hľadáte nových prispievateľov a partnerov pre váš open source projekt? "
+"PyCon je miesto, kde aj oni budú hľadať vás."
 
 #: templates/sponsoring.html:51
 msgid "Support"
@@ -557,7 +691,9 @@ msgstr "Podpora"
 msgid ""
 "Are you using Python in your company? Support for community events is an "
 "excellent opportunity to contribute back."
-msgstr "Používate vo vašej firme Python? Podpora komunitných udalostí je výborná príležitosť ako prispieť späť."
+msgstr ""
+"Používate vo vašej firme Python? Podpora komunitných udalostí je výborná "
+"príležitosť ako prispieť späť."
 
 #: templates/venue.html:8
 msgid "How do you get to Slovak PyCon?"
@@ -763,4 +899,7 @@ msgstr ""
 #~ "practices <a href=\"https://mailchimp.com/legal/\" "
 #~ "target=\"_blank\">here</a>."
 #~ msgstr ""
+
+#~ msgid "The Call For Proposals is open!"
+#~ msgstr "Podávanie návrhov na prednášky je otvorené!"
 
